--- a/src/main/resources/EndTurn.fxml
+++ b/src/main/resources/EndTurn.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.EndTurnController">
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.EndTurnController">
     <children>
         <ImageView fitHeight="743.0" fitWidth="1162.0" pickOnBounds="true">
             <image>
@@ -73,7 +73,7 @@
                 <Font size="18.0" />
             </font>
         </Label>
-        <Label fx:id="Player2" layoutX="959.0" layoutY="382.0" text="Label" />
+        <Label fx:id="Player4" layoutX="959.0" layoutY="382.0" text="Label" />
         <Label layoutX="665.0" layoutY="530.0" text="Points:">
             <font>
                 <Font size="18.0" />
@@ -85,7 +85,7 @@
                 <Font size="18.0" />
             </font>
         </Label>
-        <Label fx:id="Points2" layoutX="1030.0" layoutY="543.0" text="00" />
+        <Label fx:id="Points4" layoutX="1030.0" layoutY="543.0" text="00" />
         <ImageView fitHeight="320.0" fitWidth="310.0" layoutX="550.0" layoutY="215.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@Images/bookshelf.png" />
@@ -125,7 +125,7 @@
                 <Image url="@Images/bookshelf.png" />
             </image>
         </ImageView>
-      <GridPane fx:id="Player1Grid1" hgap="2.0" layoutX="966.0" layoutY="39.0" prefHeight="116.0" prefWidth="107.0" vgap="2.0">
+      <GridPane fx:id="Player2Grid" hgap="2.0" layoutX="966.0" layoutY="39.0" prefHeight="116.0" prefWidth="107.0" vgap="2.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -147,7 +147,7 @@
             <Image url="@Images/bookshelf.png" />
          </image>
       </ImageView>
-      <GridPane fx:id="Player1Grid11" hgap="2.0" layoutX="966.0" layoutY="223.0" prefHeight="116.0" prefWidth="107.0" vgap="2.0">
+      <GridPane fx:id="Player3Grid" hgap="2.0" layoutX="966.0" layoutY="223.0" prefHeight="116.0" prefWidth="107.0" vgap="2.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -169,7 +169,7 @@
             <Image url="@Images/bookshelf.png" />
          </image>
       </ImageView>
-      <GridPane fx:id="Player1Grid111" hgap="2.0" layoutX="966.0" layoutY="408.0" prefHeight="116.0" prefWidth="107.0" vgap="2.0">
+      <GridPane fx:id="Player4Grid" hgap="2.0" layoutX="966.0" layoutY="408.0" prefHeight="116.0" prefWidth="107.0" vgap="2.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -188,9 +188,9 @@
       </GridPane>
       <Label layoutX="993.0" layoutY="358.0" text="Points:" />
       <Label layoutX="993.0" layoutY="174.0" text="Points:" />
-      <Label fx:id="Points21" layoutX="1030.0" layoutY="174.0" text="00" />
-      <Label fx:id="Points22" layoutX="1030.0" layoutY="358.0" text="00" />
-      <Label fx:id="Player21" layoutX="959.0" layoutY="15.0" text="Label" />
-      <Label fx:id="Player22" layoutX="959.0" layoutY="197.0" text="Label" />
+      <Label fx:id="Points2" layoutX="1030.0" layoutY="174.0" text="00" />
+      <Label fx:id="Points3" layoutX="1030.0" layoutY="358.0" text="00" />
+      <Label fx:id="Player2" layoutX="959.0" layoutY="15.0" text="Label" />
+      <Label fx:id="Player3" layoutX="959.0" layoutY="197.0" text="Label" />
     </children>
 </AnchorPane>
